# idiomaticivan

./: Makefile  README.md  docker-compose.yml
idiomaticapp/: .gitignore  Makefile  chat.py  hfpipelines.py  main.py  pyproject.toml  sbom.json
idiomaticapp/static/: index.html
ivanui/: Dockerfile  package-lock.json  package.json
